# TwoSample_KDCA

./: README.md  mmd_permu.py  mmd_permu_results.txt  multiple_kernel_truncate.py  multiple_kernel_truncate_results.txt  plot_example.py  pyproject.toml  single_kernel_truncate_results.txt  single_kernel_truncated_vs_all.py
DGPs/: dgp_alternative_set1_2.py  dgp_alternative_set3.py  dgp_alternative_set4.py  dgp_null.py
appendix_code/: Chatterjee_mmmd_results.txt  chatterjee_mmmd.py  functions.py  multiple_kernel_truncate_agg_mb.py  multiple_kernel_truncate_agg_mb_results.txt  single_jth_dc.py  single_jth_dc_results.txt
appendix_code/MMMD_R_Code/Power over Dimensions/Code/Kernel Tests/: .Rhistory  Body.R
application/: functions.py  main_application.py
